force-app/main/default/objects/Credit_Memo_Application__c/fields/Credit_Memo_Application__c.object-meta.xml
<CustomObject>
  <label>Credit Memo Application</label>
  <pluralLabel>Credit Memo Applications</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Name</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>