force-app/main/default/objects/Credit_Memo_Application__c/fields/Credit_Memo__c.field-meta.xml
<CustomField>
  <fullName>Credit_Memo__c</fullName>
  <label>Credit Memo</label>
  <type>MasterDetail</type>
  <referenceTo>Credit_Memo__c</referenceTo>
  <relationshipName>Credit_Memo_Applications</relationshipName>
  <relationshipLabel>Credit Memo Applications</relationshipLabel>
</CustomField>