force-app/main/default/objects/Credit_Memo_Application__c/fields/Invoice__c.field-meta.xml
<CustomField>
  <fullName>Invoice__c</fullName>
  <label>Invoice</label>
  <type>MasterDetail</type>
  <referenceTo>Invoice__c</referenceTo>
  <relationshipName>Invoice_Credit_Memo_Applications</relationshipName>
  <relationshipLabel>Credit Memo Applications</relationshipLabel>
</CustomField>